# deno_lockfile

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  deno.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
js/: deno.json  mod.ts  test.ts
lib/: Cargo.toml  lib.rs
src/: error.rs  graphs.rs  lib.rs  lockfile.rs  parser.rs  printer.rs  transforms.rs
src/lockfile/: lockfile_content.rs  workspace_config.rs
src/printer/: v4.rs
tests/: integration_test.rs  spec_test.rs  spec_tests.rs
tests/helpers/: mod.rs
tests/registry_data/: @a__pkg@2.1.5.json  @aa__pkg@2.1.5.json  @c__pkg@2.0.5.json
tests/specs/config_changes/: CircularJsrDep.txt  CircularJsrDep01.txt  CircularJsrDep02.txt  CircularJsrDep03.txt  DenoIssue22250.txt  DepNotReferencedViaRoots.txt  LinkChangingRemovesAddedLinks.txt  LinkChangingRemovesNpmDeps.txt  NoConfigDoesNotRemove.txt  NoConfigMaintains.txt  NoConfigMaintainsWeirdFormatting.txt  NoConfigMaintains_v4.txt  NoConfigWorkspaceMaintains.txt  NoNpmMaintainsNpm.txt  NoNpmWorkspaceMaintainsNpm.txt  PatchChangingRemovesNpmDeps.txt  PatchChangingRemovesNpmDeps2.txt  PatchNotChangingKeepsNpmDeps.txt  PeerDep01.txt  PeerDep02.txt  RemovedConfigRemoves.txt  RemovedDenoJsonRemoves.txt  RemovedPackageJsonRemoves.txt  RemovingDep.txt  RemovingNpmDepsDenoJson.txt  RemovingOakThenDax.txt  RemovingWorkspaceDep.txt  RemovingWorkspaceMember.txt  ShiftingDepsDifferentPackage.txt  ShiftingDepsDifferentWorkspaceMember.txt  UpdatingPeerDep.txt  Vite.txt
tests/specs/config_changes/links/: adding_with_different_npm_deps_clears.txt  adding_with_same_npm_deps_maintains.txt  changing_different_deps_removes_added_links.txt  changing_same_deps_removes_added_links.txt
tests/specs/transforms/: upgrades_v3_https_only.txt  upgrades_v3_jsr_same_dep_different_specifiers.txt  upgrades_v3_npm_bundle_deps.txt  upgrades_v3_npm_dep_different_key_name.txt  upgrades_v3_npm_dep_multiple_versions.txt  upgrades_v3_real_example_1.txt
tests/specs/v4/config_changes/: CircularJsrDep02.txt  DenoIssue22250.txt  NoConfigMaintains.txt  NoConfigWorkspaceMaintains.txt  NoNpmMaintainsNpm.txt  PatchChangingRemovesNpmDeps.txt  PatchChangingRemovesNpmDeps2.txt  PatchNotChangingKeepsNpmDeps.txt  RemovedConfigRemoves.txt  RemovedDenoJsonRemoves.txt  RemovedPackageJsonRemoves.txt  RemovingNpmDepsDenoJson.txt  RemovingOakThenDax.txt  RemovingWorkspaceDep.txt  RemovingWorkspaceMember.txt  ShiftingDepsDifferentWorkspaceMember.txt
(+6 files in other folders)
