# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_lockfile"
version = "0.23.2"
edition = "2021"
license = "MIT"
description = "An implementation of a lockfile used in Deno"
repository = "https://github.com/denoland/deno_lockfile"

[[test]]
name = "specs"
path = "tests/spec_test.rs"
harness = false

[dependencies]
deno_semver = "0.7.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "2.0.3"

[dev-dependencies]
file_test_runner = "0.7.4"
pretty_assertions = "1.4.0"
